# sound-finder

./: CMakeLists.txt  READMD.md  README.md  analyse.c  audio.c  audio.h  cone.py  i2s.pio  ili9341.c  ili9341.h  main.c  main1.c  offset_calc.py  offsets.c  offsets.h  ov7670.c  ov7670.h  ov7670.pio  ov7670reg.h  pins.h  video.c  video.h
docs/: Pinout-Sheet.odt
